--- a/index.html
+++ b/index.html
@@ -4,10 +4,121 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="canvas" height="500" width="500">
-    </canvas>
+    <div class="p-5 bg-primary text-white text-center">
+        <h1>Responsive Routes</h1>
+        <p>The best way to optimize trnsportation</p> 
+    </div>
+    <div class="container mt-5">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="text-center">Joint Trips</h2>
+            <h5 class="text-center">Give people rides along the way</h5>
+            <div class="map-continer">
+                <canvas class="map" id="canvas" height="400" width="700">
+                </canvas>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-md-4">
+                <div class="input-group mb-3">
+                    <label for="basic-url" class="form-label">Car start point</label>
+                    <div class="input-group">
+                        <span class="input-group-text">x</span>
+                        <input id="car-start-x" type="number" class="form-control" aria-label="Username">
+                        <span class="input-group-text">y</span>
+                        <input id="car-start-y" type="number" class="form-control" aria-label="Server">
+                    </div>
+                </div>
+                <div class="input-group mb-3">
+                    <label for="basic-url" class="form-label">Car end point</label>
+                    <div class="input-group">
+                        <span class="input-group-text">x</span>
+                        <input id="car-end-x" type="number" class="form-control" aria-label="Username">
+                        <span class="input-group-text">y</span>
+                        <input id="car-end-y" type="number" class="form-control" aria-label="Server">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="input-group mb-3">
+                    <label for="basic-url" class="form-label">User start point</label>
+                    <div class="input-group">
+                        <span class="input-group-text">x</span>
+                        <input id="user-start-x" type="number" class="form-control" aria-label="Username">
+                        <span class="input-group-text">y</span>
+                        <input id="user-start-y" type="number" class="form-control" aria-label="Server">
+                    </div>
+                </div>
+                <div class="input-group mb-3">
+                    <label for="basic-url" class="form-label">User end point</label>
+                    <div class="input-group">
+                        <span class="input-group-text">x</span>
+                        <input id="user-end-x" type="number" class="form-control" aria-label="Username">
+                        <span class="input-group-text">y</span>
+                        <input id="user-end-y" type="number" class="form-control" aria-label="Server">
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row mb-5 mt-2">
+            <div class="col-12 text-center"><button id="carButton" type="button" class="btn btn-primary">Can the car get the user?</button></div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="text-center">Adaptive Bus Routes</h2>
+                <h5 class="text-center">Convenient and effective bus routes</h5>
+                <div class="map-continer">
+                    <canvas class="map" id="canvas2" height="400" width="700">
+                    </canvas>
+                </div>
+              </div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-md-8">
+                <div class="input-group mb-3">
+                    <label for="basic-url" class="form-label">Start point</label>
+                    <div class="input-group">
+                        <span class="input-group-text">x</span>
+                        <input id="point-start-x" type="number" class="form-control" aria-label="Username">
+                        <span class="input-group-text">y</span>
+                        <input id="point-start-y" type="number" class="form-control" aria-label="Server">
+                    </div>
+                </div>
+                <div class="input-group mb-3">
+                    <label for="basic-url" class="form-label">End point</label>
+                    <div class="input-group">
+                        <span class="input-group-text">x</span>
+                        <input id="point-end-x" type="number" class="form-control" aria-label="Username">
+                        <span class="input-group-text">y</span>
+                        <input id="point-end-y" type="number" class="form-control" aria-label="Server">
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row mb-5 mt-2">
+            <div class="col-12 text-center"><button id="busButton" type="button" class="btn btn-primary">Add Route</button></div>
+        </div>
+    </div>
+
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center text-light p-3" style="background-color: rgba(13, 110, 253, 1);">
+          © 2023 Copyright:
+          <a class="text-light" href="https://mdbootstrap.com/">Uber Hackathon</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+    
     <script type="module" src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
