--- a/index.html
+++ b/index.html
@@ -23,24 +23,27 @@
             </div>
           </div>
         </div>
+        <div class="row mb-1 mt-2">
+            <div class="col-12 text-center"><p class="fs-3" id="car-results">Let's find whether a car can give you a lift</p></div>
+        </div>
         <div class="row">
             <div class="col-2"></div>
             <div class="col-md-4">
                 <div class="input-group mb-3">
                     <label for="basic-url" class="form-label">Car start point</label>
                     <div class="input-group">
-                        <span class="input-group-text">x</span>
+                        <span class="input-group-text text-bg-danger">x</span>
                         <input id="car-start-x" type="number" class="form-control" aria-label="Username">
-                        <span class="input-group-text">y</span>
+                        <span class="input-group-text text-bg-danger">y</span>
                         <input id="car-start-y" type="number" class="form-control" aria-label="Server">
                     </div>
                 </div>
                 <div class="input-group mb-3">
                     <label for="basic-url" class="form-label">Car end point</label>
                     <div class="input-group">
-                        <span class="input-group-text">x</span>
+                        <span class="input-group-text text-bg-danger">x</span>
                         <input id="car-end-x" type="number" class="form-control" aria-label="Username">
-                        <span class="input-group-text">y</span>
+                        <span class="input-group-text text-bg-danger">y</span>
                         <input id="car-end-y" type="number" class="form-control" aria-label="Server">
                     </div>
                 </div>
@@ -49,18 +52,18 @@
                 <div class="input-group mb-3">
                     <label for="basic-url" class="form-label">User start point</label>
                     <div class="input-group">
-                        <span class="input-group-text">x</span>
+                        <span class="input-group-text text-bg-success">x</span>
                         <input id="user-start-x" type="number" class="form-control" aria-label="Username">
-                        <span class="input-group-text">y</span>
+                        <span class="input-group-text text-bg-success">y</span>
                         <input id="user-start-y" type="number" class="form-control" aria-label="Server">
                     </div>
                 </div>
                 <div class="input-group mb-3">
                     <label for="basic-url" class="form-label">User end point</label>
                     <div class="input-group">
-                        <span class="input-group-text">x</span>
+                        <span class="input-group-text text-bg-success">x</span>
                         <input id="user-end-x" type="number" class="form-control" aria-label="Username">
-                        <span class="input-group-text">y</span>
+                        <span class="input-group-text text-bg-success">y</span>
                         <input id="user-end-y" type="number" class="form-control" aria-label="Server">
                     </div>
                 </div>
@@ -70,15 +73,18 @@
         <div class="row mb-5 mt-2">
             <div class="col-12 text-center"><button id="carButton" type="button" class="btn btn-primary">Can the car get the user?</button></div>
         </div>
-        <div class="row">
+        <div class="row mt-4">
             <div class="col-lg-12">
-                <h2 class="text-center">Adaptive Bus Routes</h2>
+                <h2 class="text-center mt-4">Adaptive Bus Routes</h2>
                 <h5 class="text-center">Convenient and effective bus routes</h5>
                 <div class="map-continer">
                     <canvas class="map" id="canvas2" height="400" width="700">
                     </canvas>
                 </div>
               </div>
+        </div>
+        <div class="row mb-1 mt-2">
+            <div class="col-12 text-center"><p class="fs-3" id="bas-results">A map that shows where routes need to be taken</p></div>
         </div>
         <div class="row">
             <div class="col-2"></div>
