--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="col-12 text-center" id="explore-btn"><button type="button" class="btn btn-light" onclick="window.location.href='#top-header';">Explore</button></div>
     <div class="p-5 bg-primary text-white text-center">
-        <h1>Responsive Routes</h1>
+        <div id="gif-container"><img src="ResponsiveRoutesLogoAnimation (1).gif" alt="Computer man" style="width:718px;height:404px;"></div>
+        
+        <h1 id="top-header">Responsive Routes</h1>
         <p>The best way to optimize transportation</p> 
     </div>
+    
     <div class="container mt-5">
         <div class="row">
           <div class="col-lg-12">
@@ -44,7 +48,7 @@
               </div>
         </div>
         <div class="row mb-1 mt-2">
-            <div class="col-12 text-center"><p class="fs-3" id="bas-results">A map that shows where routes need to be taken</p></div>
+            <div class="col-12 text-center"><p class="fs-3" id="bas-results">A map that shows where bus routes need to be created</p></div>
         </div>
         <div class="row mb-5 mt-2">
             <div class="col-12 text-center"><button id="busButton" type="button" class="btn btn-primary">Refresh</button></div>
@@ -55,7 +59,7 @@
         <!-- Copyright -->
         <div class="text-center text-light p-3" style="background-color: rgba(13, 110, 253, 1);">
           © 2023 Copyright:
-          <a class="text-light" href="https://mdbootstrap.com/">Uber Hackathon</a>
+          <a class="text-light" href="https://mdbootstrap.com/">Virtual Global Hackathon</a>
         </div>
         <!-- Copyright -->
       </footer>
