modified:   index.html modified:   style.css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="col-12 text-center" id="explore-btn"><button type="button" class="btn btn-light" onclick="window.location.href='#top-header';">Explore</button></div>
+    
     <div class="p-5 bg-primary text-white text-center">
-        <div id="gif-container"><img src="ResponsiveRoutesLogoAnimation (1).gif" alt="Computer man" style="width:718px;height:404px;"></div>
+        <div id="gif-container">
+            <img src="ResponsiveRoutesLogoAnimation (1).gif" alt="Computer man" style="width:718px;height:404px;">
+            <div class="col-12 text-center" id="explore-btn"><button type="button" class="btn btn-light" onclick="window.location.href='#top-header';">Explore</button></div>
+        </div>
         
         <h1 id="top-header">Responsive Routes</h1>
         <p>The best way to optimize transportation</p> 
