--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="ResponsiveRoutesLogoAnimation (1).gif" alt="Computer man" style="width:718px;height:404px;">
             <div class="col-12 text-center" id="explore-btn"><button type="button" class="btn btn-light" onclick="window.location.href='#top-header';">Explore</button></div>
         </div>
-        <h1 id="top-header">Responsive Routes</h1>
+        <h1 id="top-header">Responsible Routes</h1>
         <p>The best way to optimize transportation</p> 
     </div>
     
