modified:   index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- Copyright -->
         <div class="text-center text-light p-3" style="background-color: rgba(13, 110, 253, 1);">
           © 2023 Copyright:
-          <a class="text-light" href="https://mdbootstrap.com/">Virtual Global Hackathon</a>
+          <a class="text-light">Virtual Global Hackathon</a>
         </div>
         <!-- Copyright -->
       </footer>
